syntax = 'proto3';

message Post {
    string title = 1;
    string description = 2;
    string authorId = 3;
}

message CreatePostRequest {
    Post post = 1;
}

message CreatePostResponse {
    string id = 1;
    Post post = 2;
}

message GetPostRequest {
    string id = 1;
}

message GetPostResponse {
    string id = 1;
    Post post = 2;
}

message UpdatePostRequest {
    string id = 1;
    Post post = 2;
}

message UpdatePostResponse {
    string id = 1;
    Post post = 2;
}

service PostService {
    rpc CreatePost(CreatePostRequest) returns (CreatePostResponse) {};
    rpc GetPost(GetPostRequest) returns (GetPostResponse) {};
    rpc UpdatePost(UpdatePostRequest) returns (UpdatePostResponse) {};
}